# EA_SCALPER_XAUUSD

./: .claude.json  .coverage  .env  .env.example  .gitignore  .kilocodemodes  .roomodes  AGENTS.md  AGENTS_CRITICAL_ANALYSIS.md  AGENTS_OPTIMIZATION_REPORT.md  AGENTS_OPTIMIZED.md  AGENTS_v2.2_BACKUP.md  AGENTS_v3.1_MARKDOWN_BACKUP.md  AGENTS_v3.4.1_BACKUP_PRE_OPTIMIZATION.md  AGENTS_v3_BALANCED.md  ARQUITETURA_MT5_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS_REPORT.md  EA_SCALPER_XAUUSD.code-workspace  GUIA_TRAE_MCP_MT5.md  MASTER_INDEX_REORGANIZADO.json  ORGANIZATION.md  PARTE_01_COMPREENSAO_ARQUITETURA.md  PARTE_02_DESIGN_DETALHADO.md  PARTE_03_CODIGO_EA_PRINCIPAL.md  PARTE_04_CODIGO_RISK_SCORING.md  PROJETO_CORRECAO_FINALIZADO.md  PROPOSTA_REORGANIZACAO_COMPLETA.md  README.md  RELATORIO_FINAL_MIGRACAO.md  RESPOSTA_PARTE_01.md  RESPOSTA_PARTE_05.md  agents.md  check_data_quality.py  check_dates.py  cleanup_now.ps1  cleanup_orphan_nodes.ps1  convert_filtered_ticks.py  count_mcps.ps1  (+18 more)
nautilus_gold_scalper/: BUGFIX_LOG.md  CHANGELOG.md  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_NOTES_NewsTrader.md  INDEX.md  NEWSCALENDAR_IMPLEMENTATION.md  ONNX_MIGRATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  test_holiday_simple.py
nautilus_gold_scalper/configs/: strategy_config.yaml
nautilus_gold_scalper/scripts/: batch_backtest.py  mass_backtest.py  nautilus_backtest.py  nautilus_tick_backtest.py  run_backtest.py  validate_apex_compliance.py
nautilus_gold_scalper/src/: __init__.py
nautilus_gold_scalper/src/context/: __init__.py  holiday_detector.py
nautilus_gold_scalper/src/core/: __init__.py  data_types.py  definitions.py  exceptions.py
nautilus_gold_scalper/src/execution/: __init__.py  base_adapter.py  execution_model.py  mt5_adapter.py  ninjatrader_adapter.py  trade_manager.py
nautilus_gold_scalper/src/indicators/: FOOTPRINT_ANALYZER_STATUS.md  __init__.py  amd_cycle_tracker.py  footprint_analyzer.py  fvg_detector.py  liquidity_sweep.py  mtf_manager.py  order_block_detector.py  regime_detector.py  session_filter.py  structure_analyzer.py
nautilus_gold_scalper/src/ml/: README.md  __init__.py  ensemble_predictor.py  feature_engineering.py  model_trainer.py
nautilus_gold_scalper/src/risk/: __init__.py  circuit_breaker.py  consistency_tracker.py  dd_protection.py  drawdown_tracker.py  position_sizer.py  prop_firm_manager.py  spread_monitor.py  time_constraint_manager.py  var_calculator.py
nautilus_gold_scalper/src/signals/: NEWS_CALENDAR_USAGE.md  __init__.py  confluence_scorer.py  entry_optimizer.py  mtf_manager.py  news_calendar.py  news_trader.py
nautilus_gold_scalper/src/strategies/: __init__.py  base_strategy.py  gold_scalper_strategy.py  strategy_selector.py
nautilus_gold_scalper/src/utils/: metrics.py  telemetry.py
nautilus_gold_scalper/tests/: __init__.py  test_apex_compliance.py  test_holiday_detector.py  test_onnx_migration.py  test_onnx_simple.py  test_spread_monitor.py
nautilus_gold_scalper/tests/test_execution/: __init__.py  test_execution_model.py  test_trade_manager.py
nautilus_gold_scalper/tests/test_indicators/: test_fibonacci_levels.py  test_footprint_analyzer.py  test_footprint_analyzer_signal.py  test_footprint_configurable.py  test_mtf_manager.py  test_regime_detector.py  test_session_filter.py  test_smc_detectors.py
nautilus_gold_scalper/tests/test_integration/: test_strategy_flow.py  test_tick_backtest_e2e.py
nautilus_gold_scalper/tests/test_risk/: __init__.py  test_circuit_breaker_integration.py  test_circuit_breaker_levels.py  test_consistency_integration.py  test_consistency_tracker.py  test_dd_protection.py  test_drawdown_tracker.py  test_position_sizer.py  test_prop_firm_manager.py  test_prop_firm_manager_apex.py  test_time_constraint_manager.py
nautilus_gold_scalper/tests/test_signals/: __init__.py  (+1 more)
🤖 AI_AGENTS/MCP_Code_Checker/: .gitignore  INSTALL.md  pyproject.toml
(+18040 files in other folders)
